# ros-nodes-for-notes

./: README.md
euclidean_clustering/: CMakeLists.txt  README.md  package.xml
euclidean_clustering/include/euclidean_clustering/: euclidean_clustering.hpp
euclidean_clustering/launch/: euclidean_clustering.launch
euclidean_clustering/src/: euclidean_clustering_node.cpp
rosbag_handler_node/: CMakeLists.txt  README.md  package.xml
rosbag_handler_node/include/rosbag_handler_node/: rosbag_handler_node.hpp
rosbag_handler_node/launch/: rosbag_handler_node_launch.xml
rosbag_handler_node/src/: rosbag_handler_node.cpp  rosbag_handler_node.cpp~
rosbag_parser_node/: CMakeLists.txt  README.md  package.xml
rosbag_parser_node/include/rosbag_parser_node/: rosbag_parser_node.hpp
rosbag_parser_node/launch/: update_pc_fields.xml
rosbag_parser_node/src/: rosbag_parser_node.cpp
rosbag_read_and_write/: CMakeLists.txt  README.md  package.xml
rosbag_read_and_write/include/rosbag_read_and_write/: rosbag_read_and_write.h
rosbag_read_and_write/src/: rosbag_read_and_write_node.cpp
